Fix text-align of footer.

--- a/anti-apple/src/components/Home.module.css
+++ b/anti-apple/src/components/Home.module.css
@@ -11,5 +11,4 @@
     background: #cef;
     text-align: center;
     bottom: 0;
-    display: flex;
 }
